# railscale

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  audit.md  config.example.toml  flake.nix  mise.toml  progress.md  testlog.txt  tests.nix  todo.md
crates/leadscale/: Cargo.toml
crates/leadscale-db/: Cargo.toml
crates/leadscale-db/src/: error.rs  ip_allocator.rs  lib.rs
crates/leadscale-db/src/entity/: node.rs  preauth_key.rs  user.rs
crates/leadscale-db/src/migration/: m20260106_000001_create_users.rs  m20260106_000002_create_preauth_keys.rs  mod.rs
crates/leadscale-grants/: Cargo.toml
crates/leadscale-grants/src/: capability.rs  engine.rs  error.rs  grant.rs  lib.rs  selector.rs
crates/leadscale-proto/: Cargo.toml
crates/leadscale-proto/src/: error.rs  lib.rs  map_request.rs  noise.rs
crates/leadscale-state/: Cargo.toml
crates/leadscale-state/src/: error.rs  lib.rs  node_store.rs
crates/leadscale-types/: Cargo.toml
crates/leadscale-types/src/: config.rs  error.rs  keys.rs  lib.rs  node.rs  user.rs
crates/leadscale/src/: lib.rs  main.rs
crates/leadscale/src/handlers/: error.rs  map.rs  mod.rs  register.rs
crates/leadscale/tests/: map_test.rs  register_test.rs
crates/railscale/: Cargo.toml  build.rs
crates/railscale-admin/: Cargo.toml  build.rs
crates/railscale-admin/proto/: admin.proto
crates/railscale-admin/src/: lib.rs  server.rs
crates/railscale-bench/: Cargo.toml
crates/railscale-bench/src/: harness.rs  lib.rs  main.rs  report.rs
crates/railscale-db/: Cargo.toml
crates/railscale-db/src/: error.rs  ip_allocator.rs  lib.rs
crates/railscale-db/src/entity/: api_key.rs  audit_log.rs  dns_challenge_record.rs  mod.rs  node.rs  preauth_key.rs  tka_aum.rs  tka_state.rs  user.rs
crates/railscale-db/src/migration/: m20260106_000001_create_users.rs  m20260106_000002_create_preauth_keys.rs  m20260106_000003_create_nodes.rs  m20260106_000004_create_api_keys.rs  m20260121_000001_api_key_split_token.rs  m20260125_000001_add_user_oidc_groups.rs  m20260130_000005_create_tka_state.rs  m20260130_000006_add_genesis_aum.rs  m20260131_000007_create_tka_aums.rs  m20260131_000008_add_posture_attributes.rs  m20260131_000009_add_last_seen_country.rs  m20260201_000010_add_node_ephemeral.rs  m20260205_000011_add_unique_name_and_node_key_index.rs  m20260206_000012_add_nl_public_key.rs  m20260208_000013_create_dns_challenge_records.rs  m20260217_000014_create_audit_logs.rs  mod.rs
crates/railscale-grants/: Cargo.toml
crates/railscale-grants/src/: capability.rs  engine.rs  error.rs  geoip.rs  lib.rs  policy.rs  posture.rs  selector.rs  ssh.rs
crates/railscale-migrate/: Cargo.toml
crates/railscale-migrate/src/: config.rs  headscale_acl.rs  lib.rs  main.rs  nodes.rs  users.rs
crates/railscale-migrate/tests/fixtures/: headscale-acl.json
crates/railscale-proto/: Cargo.toml
crates/railscale-proto/src/: lib.rs  map_request.rs  noise.rs  ssh.rs  tka.rs
crates/railscale-state/: Cargo.toml
crates/railscale-state/src/: lib.rs  node_store.rs
crates/railscale-tka/: Cargo.toml
crates/railscale-tka/src/: aum.rs  aum_hash.rs  authority.rs  disablement.rs  error.rs  key.rs  key_id.rs  lib.rs  marshaled.rs  nl_key.rs  signature.rs  state.rs
crates/railscale-types/: Cargo.toml
crates/railscale-types/src/: api_key.rs  config.rs  dns_label.rs  email.rs  error.rs  keys.rs  lib.rs  node.rs  node_name.rs  oidc.rs  oidc_group_prefix.rs  policy_json.rs  preauth_key.rs  preauth_key_token.rs  tag.rs  test_utils.rs  user.rs  username.rs
crates/railscale/src/: derp.rs  derp_server.rs  dns.rs  dns_challenge_gc.rs  ephemeral.rs  lib.rs  main.rs  map_cache.rs  map_session.rs  noise_stream.rs  notifier.rs  oidc.rs  presence.rs  rate_limit.rs  resolver.rs  stun.rs
crates/railscale/src/cli/: apikeys.rs  lock.rs  mod.rs  nodes.rs  policy.rs  preauthkeys.rs  serve.rs  users.rs
crates/railscale/src/dns_provider/: cloudflare.rs  godaddy.rs  mod.rs  webhook.rs
crates/railscale/src/handlers/: api_auth.rs  audit_log.rs  bootstrap_dns.rs  error.rs  health.rs  key.rs  machine_key_context.rs  map.rs  mod.rs  oidc.rs  register.rs  set_device_attr.rs  set_dns.rs  templates.rs  test_helpers.rs  tka.rs  ts2021.rs  verify.rs  version.rs
crates/railscale/src/handlers/api_v1/: api_keys.rs  mod.rs  nodes.rs  policy.rs  preauth_keys.rs  users.rs  validation.rs
crates/railscale/src/handlers/ts2021/: http_noise_stream.rs  mod.rs  ws_noise_stream.rs
crates/railscale/tests/: bootstrap_dns_test.rs  derp_server_test.rs  error_test.rs  health_test.rs  key_test.rs  map_basic_test.rs  map_format_test.rs  map_grants_test.rs  map_stream_test.rs  map_test.rs  noise_key_test.rs  oidc_test.rs  policy_reload_test.rs  register_test.rs  ts2021_basic_test.rs  ts2021_http_upgrade_test.rs  ts2021_test.rs  ts2021_websocket_test.rs  verify_test.rs  version_test.rs
crates/railscale/tests/map_common/: mod.rs
crates/railscale/tests/ts2021_common/: mod.rs
examples/: policy.json
nix/: devshell.nix  module.nix  package.nix
nix/tests/: bench-comparison.exs  bench-comparison.nix  bench.sh  cli-integration-attest.exs  cli-integration-attest.nix  cli-integration-snapshot.nix  cli-integration.nix  cli-integration.py  common.nix  helpers.py  module-smoke-attest.exs  module-smoke-attest.nix  module-smoke-snapshot.nix  module-smoke.nix  nodes.nix  policy-reload-attest.exs  policy-reload-attest.nix  policy-reload-snapshot.nix  policy-reload.nix  policy-reload.py  snapshot-bench-attest.nix  test_apikeys.py  test_groups.py  test_keys_usage.py  test_lock.py  test_nodes.py  test_preauthkeys.py  test_rest_api.py  test_server.py  test_ssh.py  test_taildrop.py  test_users.py
