[workspace]
resolver = "2"
members = [
    "crates/railscale",
    "crates/railscale-types",
    "crates/railscale-db",
    "crates/railscale-state",
    "crates/railscale-proto",
    "crates/railscale-grants",
]

[workspace.metadata.crane]
name = "railscale"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/mushrowan/railscale"
authors = ["mushrowan"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
ipnet = { version = "2", features = ["serde"] }

# Cryptography (for Noise protocol, keys)
# Note: may need tailscale-specific crates - user to research

# Database
# Note: user to decide between sqlx, sea-orm, diesel

# Time
chrono = { version = "0.4", features = ["serde"] }

# OIDC
openidconnect = "4"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Internal crates
railscale-types = { path = "crates/railscale-types" }
railscale-db = { path = "crates/railscale-db" }
railscale-state = { path = "crates/railscale-state" }
railscale-proto = { path = "crates/railscale-proto" }
railscale-grants = { path = "crates/railscale-grants" }
