[workspace]
resolver = "2"
members = [
  "crates/railscale",
  "crates/railscale-types",
  "crates/railscale-db",
  "crates/railscale-proto",
  "crates/railscale-grants",
  "crates/railscale-admin",
  "crates/railscale-tka",
]

[workspace.metadata.crane]
name = "railscale"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/mushrowan/railscale"
authors = ["mushrowan"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
ipnet = { version = "2", features = ["serde"] }

# Cryptography (for Noise protocol, keys)
# Note: may need tailscale-specific crates - user to research

# Database
# Note: user to decide between sqlx, sea-orm, diesel

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1.1"

# Binary data
bytes = "1"
base64 = "0.22"

# Validation
email_address = { version = "0.2", features = ["serde_support"] }

# OIDC
openidconnect = "4"

# Caching
moka = { version = "0.12", features = ["sync"] }

# GeoIP
maxminddb = "0.27"

# Secret handling
secrecy = { version = "0.10", features = ["serde"] }

# Internal crates
railscale-types = { path = "crates/railscale-types" }
railscale-db = { path = "crates/railscale-db" }
railscale-proto = { path = "crates/railscale-proto" }
railscale-grants = { path = "crates/railscale-grants" }
railscale-admin = { path = "crates/railscale-admin" }
railscale-tka = { path = "crates/railscale-tka" }
