[package]
name = "leadscale-grants"
description = "Grants-based access control for Leadscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leadscale-types = { workspace = true }
leadscale-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
