[package]
name = "leadscale-proto"
description = "Tailscale protocol implementation for Leadscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leadscale-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Noise protocol - user to research best crate
# snow = "0.9"  # Noise protocol implementation

[dev-dependencies]
