[package]
name = "leadscale-state"
description = "State management for Leadscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leadscale-types = { workspace = true }
leadscale-db = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
