[package]
name = "leadscale"
description = "Leadscale - Tailscale control server in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "leadscale"
path = "src/lib.rs"

[[bin]]
name = "leadscale"
path = "src/main.rs"

[dependencies]
leadscale-types = { workspace = true }
leadscale-db = { workspace = true }
leadscale-state = { workspace = true }
leadscale-proto = { workspace = true }
leadscale-grants = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# CLI - user to decide on clap vs argh
# clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = "0.5"
hyper = "1.5"
chrono = { workspace = true }
