[package]
name = "railscale-admin"
description = "Admin gRPC service for railscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
railscale-grants = { workspace = true }
railscale-db = { workspace = true }
railscale-types = { workspace = true }
railscale-tka = { workspace = true }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { workspace = true }
tower = "0.5"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
hex = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
