[package]
name = "railscale-bench"
description = "Protocol-level benchmarks for railscale (and headscale comparison)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
railscale = { path = "../railscale" }
railscale-db = { path = "../railscale-db" }
railscale-types = { path = "../railscale-types" }
railscale-proto = { path = "../railscale-proto" }
railscale-grants = { path = "../railscale-grants" }
axum = "0.8"
tokio = { workspace = true }
tower = "0.5"
serde_json = { workspace = true }
serde = { workspace = true }
bytes = "1"
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
