[package]
name = "railscale-db"
description = "Database layer for railscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
railscale-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
hex = "0.4"

# Database
sea-orm = { version = "1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
