[package]
name = "railscale-proto"
description = "Tailscale protocol implementation for railscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
railscale-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
snow = "0.10"

[dev-dependencies]
proptest = "1.9"
