[package]
name = "railscale-proto"
description = "Tailscale protocol implementation for railscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
railscale-types = { workspace = true }
railscale-tka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
snow = "0.10"
chacha20poly1305 = "0.10"

[dev-dependencies]
proptest = "1.10"
