[package]
name = "railscale-state"
description = "State management for railscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
railscale-types = { workspace = true }
railscale-db = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
