[package]
name = "railscale-tka"
description = "Tailnet Key Authority (TKA) implementation for railscale"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
hex = "0.4"
base64 = { workspace = true }

# crypto
blake2 = "0.10"
ed25519-consensus = "2.1"
rand = "0.10"
subtle = "2.6"

# cbor with integer keys
minicbor = { version = "2.2", features = ["derive", "alloc"] }

[dev-dependencies]
proptest = "1.10"
