[package]
name = "railscale-types"
description = "Core types for railscale - Tailscale control server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
