[package]
name = "railscale-types"
description = "Core types for railscale - Tailscale control server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
email_address = { workspace = true }
secrecy = { workspace = true }
base64 = "0.22"
hex = "0.4"
rand = "0.10"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
proptest = "1.10"
