[package]
name = "railscale"
description = "railscale - Tailscale control server in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "railscale"
path = "src/lib.rs"

[[bin]]
name = "railscale"
path = "src/main.rs"

[dependencies]
railscale-types = { workspace = true }
railscale-db = { workspace = true }
railscale-state = { workspace = true }
railscale-proto = { workspace = true }
railscale-grants = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# OIDC
openidconnect = { workspace = true }
moka = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.9"

[dev-dependencies]
tower = "0.5"
hyper = "1.8"
chrono = { workspace = true }
wiremock = "0.6"
jsonwebtoken = "9"
bytes = { workspace = true }
http-body-util = "0.1"
