[package]
name = "railscale"
description = "railscale - Tailscale control server in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "railscale"
path = "src/lib.rs"

[[bin]]
name = "railscale"
path = "src/main.rs"

[dependencies]
railscale-types = { workspace = true }
railscale-db = { workspace = true }
railscale-proto = { workspace = true }
railscale-grants = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
chrono = { workspace = true }
ipnet = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }

# CLI
clap = { version = "4", features = ["derive"] }
url = "2"
dirs = "6"

# OIDC
openidconnect = { workspace = true }
moka = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.9"

# Streaming
futures-util = "0.3"
bytes = { workspace = true }
hyper = "1.8"

# TS2021
base64 = { workspace = true }
hex = "0.4"
tokio-tungstenite = "0.26"
snow = "0.10"
tower = "0.5"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
crypto_box = "0.9"
httparse = "1.9"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "ring",
] }
rustls-pemfile = "2"
sha2 = "0.10"
tokio-rustls = "0.26"

# Compression
zstd = "0.13"

[dev-dependencies]
tower = "0.5"
hyper = "1.8"
chrono = { workspace = true }
wiremock = "0.6"
jsonwebtoken = "9"
bytes = { workspace = true }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tempfile = "3.24.0"
base64 = { workspace = true }
tokio-tungstenite = "0.26"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http = "1"
anyhow = { workspace = true }
# Crypto crates for Noise handshake testing
snow = "0.10"
zstd = "0.13"
